--- a/UI/index.html
+++ b/UI/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Custom UI ChatBot</title>
-    <h5>Custom UI ChatBot</h5>
+    <title>Custom UI ChatBot= update</title>
+    <h5>Custom UI ChatBot = updated</h5>
 
     <style>
         body {
@@ -56,7 +56,7 @@
               {
                 initPayload: "/start_bot",
                 customData: { language: "en" },
-                socketUrl: "http://localhost:5005/",
+                socketUrl: "http://rasa:5005/",
                 subtitle: "Type 'Hey' to get started, Type 'Help' to get more information",
                 // add other props here
               },
